--- a/content/blog/javascript/함수.md
+++ b/content/blog/javascript/함수.md
@@ -1,5 +1,5 @@
 ---
-title: 함수란?
+title: 함수
 date: 2021-03-15 12:03:09
 category: javascript
 thumbnail: { thumbnailSrc }
@@ -17,7 +17,7 @@ draft: false
 
 
 '값을 반환하지 않는 함수가 있지않나요?'라고 생각할 수 있습니다.\
-그러나 정확히는 값을 반환하지 않는게 아니라, 반환하는 값이 undefined 라는 형태의 값이라고 생각하는게 맞다고 생각해요 :)
+그러나 정확히는 값을 반환하지 않는게 아니라, 반환하는 값이 정의되지 않은 값이라고 생각하는게 맞다고 생각해요 :)
 
 종종 다른언어(ex. PL/SQL)들은 return이 없는 코드묶음을 프로시저라는 또다른 분류로 나누기도 합니다.
 
@@ -25,8 +25,10 @@ draft: false
 
 다른 언어들도 마찬가지지만, 자바스크립트에서 [값으로 인식되는 데이터](https://developer.mozilla.org/ko/docs/Web/JavaScript/Data_structures)들은 모두 변수에 담을 수 있습니다.
 
-그리고 Javascript는 **함수도 값**으로 인식합니다. (조금 고급진 말로 함수를 일급객체라고 표현하기도 합니다.)\
-따라서 아래와같은 코드들도 가능합니다 :)
+그리고 Javascript는 **함수도 값**으로 인식합니다.\
+<small>조금 고급진 말로 "자바스크립트에서 함수는 [일급객체](https://soeunlee.medium.com/javascript%EC%97%90%EC%84%9C-%EC%99%9C-%ED%95%A8%EC%88%98%EA%B0%80-1%EA%B8%89-%EA%B0%9D%EC%B2%B4%EC%9D%BC%EA%B9%8C%EC%9A%94-cc6bd2a9ecac)다!"라고 표현하기도 합니다.</small>
+
+함수를 값으로 인식하기 때문에 다음과 같은 코드들이 가능합니다 :)
 
 
 ```js
@@ -50,17 +52,20 @@ y(x)
 
 함수는 다양한 방법으로 만들 수 있습니다.
 
-방법에 대해 알아보기 전에, **문(statement)**과, **식(expression)**의 차이점에 대해 잠깐 짚고 넘어가겠습니다!
+방법에 대해 알아보기 전에, **식(expression)**과 **문(statement)**과 대해 잠깐 짚고 넘어가겠습니다!
 
-**식(expression)**은 함수표현식, 일반적인 정의식들이 포함되며 값을 return하는 코드단위를 의미합니다.\
-return 하는 값이 있기때문에 이 값을 담을 변수가 없다면 큰 의미가 없을 수도 있는 코드단위입니다.
+**식(expression)**은 값을 return하는 코드를 의미합니다. 대표적인 예로로는 `함수표현식`, `정의식` 등이 있습니다.
+
+return 하는 값이 있기때문에 이 값을 담을 변수가 필요합니다.\
+변수가 없다면 사실 무의미한 코드라고 볼 수도 있습니다.
 ```js
 10 // 10을 return
 true // true를 return 
 1 + 1 // 2를 return 
 ```
 
-**문(statement)**은 반복문, 조건문, 대입문처럼 값을 return하지 않는 코드단위를 의미합니다.
+**문(statement)**은 식과 반대로 값을 return하지 않는 코드를 의미합니다.\
+대표적인 예로는 `반복문`, `조건문`, `대입문` 등이 있습니다. 
 ```js
 // 조건문
 if () {  /* do something */ }
@@ -74,7 +79,7 @@ const b = if () {  /* do something */ }
 const c = for (const i = 0; i < 5: i++) { /* do something */ }
 ```
 
-이 이야기를 먼저 드렸던 이유는 함수를 **문**과 **식** 두가지의 방법으로 정의할 수 있기 때문입니다.\
+이 이야기를 먼저 드렸던 이유는 함수를 **문**과 **식** 두가지의 방법으로 만들 수 있기 때문입니다.\
 문을 이용한 방법을 **함수선언문**, 식을 이용한 방법을 **함수표현식** 이라고 말합니다.
 
 ```js
@@ -88,8 +93,8 @@ function sum2 (a, b) { return a + b }
 ```
 
 이 둘의 가장 큰 차이점은 호이스팅에 의한 정의시점/호출가능시점의 차이가 있는데요,\
-자세한건 다음에 별도의 포스팅으로 다뤄보겠습니다.\
-(함수표현식에서 사용한 sum1, sum1\_1, sum1\_2의 차이점도 별도의 포스팅으로 다뤄볼게요!)
+자세한 내용은 별도의 포스팅으로 다뤄보겠습니다.\
+<small>(함수표현식에서 사용한 sum1, sum1\_1, sum1\_2의 차이점도 다뤄볼게요!)</small>
 
 ## 함수의 종류
 
