--- a/content/blog/javascript/함수.md
+++ b/content/blog/javascript/함수.md
@@ -8,7 +8,7 @@ draft: false
 
 자바스크립트에서 함수란 무엇인지, 종류에는 어떤것들이 있는지 정리해봅니다!
 
-## 정의
+## 함수란?
 
 함수는 다양한 분야에서 다양한 형식으로 정의됩니다.\
 적어도 자바스크립트에서 함수를 간단히 정리하면 아래정도가 될 것 같네요 :)
@@ -48,7 +48,7 @@ const y = function(a) {}
 y(x)
 ```
 
-## 만들기
+## 함수 만들기
 
 함수는 다양한 방법으로 만들 수 있습니다.
 
@@ -83,7 +83,6 @@ const c = for (const i = 0; i < 5: i++) { /* do something */ }
 
 ### 문(Statement)형태의 방법
 
-일반적으로 어떠한 값을 문 형태의 코드로 정의하는 방법은 리터럴이라고도 부릅니다.\
 함수도 리터럴이 있는데요, **함수선언문** 이라고 부릅니다.
 
 ```js
@@ -110,16 +109,21 @@ const sum1_3 = (a, b) => { return a + b } // arrow function
 const sum2 = new Function('a', 'b', 'return a + b') 
 ```
 
-### 문(Statement)을 이용한 생성 vs 식(Expression)을 이용한 생성
+### 함수선언문 vs 함수표현식
 
+이 둘은 [호이스팅](/javascript/호이스팅)이 발생했을때 큰 차이가 나타납니다.\
+<small>호이스팅은 선언문 코드가 제일 먼저 수행되는 자바스크립트의 메커니즘입니다.</small>
 
-이 둘의 가장 큰 차이점은 정의/호출가능 시점의 차이가 있는데요.\
-[호이스팅](/javascript/호이스팅)이라는 매커니즘에 의해 발생하는 현상입니다.
+**함수선언문**은 값을 담는 **변수의 선언과 변수에 값을 할당하는 초기화가 함께 진행**되고,  **함수표현식**은 변수의 선언과 초기화가 각각 **단계별로 나누어져 진행**됩니다.
 
-자세한 내용은 별도의 포스팅으로 다뤄보겠습니다.\
-지금은 그냥 **함수선언문으로 만들어진 함수는 코드 위치에 상관없이 어디서든 호출이 가능하다!**로 이해하면 될 것 같습니다!
+따라서 호이스팅이 발생했을 때, 함수선언문은 최상단에서 초기화가 되는 반면, 함수표현식은 선언만 수행됩니다.
+
+이는 결국 호출가능시점의 차이로 이어지게되어, **함수선언문으로 만들어진 함수는 코드 위치에 상관없이 어디서든 호출이 가능**하며 함수표현식은 불가능하게 됩니다.
 
 ```js
+fnByStatement(); // I'm a function made by statement
+fnByExpression(); // Uncaught ReferenceError: Cannot access 'fnByExpression' before initialization
+
 function fnByStatement () {
     console.log('I\'m a function made by statement');
 }
@@ -129,7 +133,19 @@ const fnByExpression = function () {
 }
 ```
 
-## 속성
+### 어떤걸 써야할까?
+
+개인의 취향이라는 생각이 듭니다.
+
+저도 함수를 정의할때마다 고민을 해왔는데요, 저는 함수선언문보다 **함수표현식을 애용**하려 합니다.
+
+일각에서는 코드의 직관성과 가독성을 떨어뜨릴수 있는, 호이스팅이 일어나는 **함수선언문을 지양하자**고도 하는데요.\
+저도 이 의견에 동의합니다.
+
+뿐만 아니라 javascript에서는 함수도 일급객체로 취급되는만큼, 다른 일급객체들과 동일하게 표현식을 이용해서 정의하는게 일관성이 있지않나하는 생각이 듭니다.
+
+
+## 함수에만 있는 속성
 javascript는 객체지향프로그래밍을 지원하는 언어입니다.\
 그렇기에 함수도 객체 형태로 존재하게되고, 속성값을 갖습니다.
 
@@ -256,7 +272,7 @@ testFn() // 'testFn'
 ```
 
 
-## 종류
+## 사용용도에 따른 종류
 
 자바스크립트에는 함수를 다양한 형태로 사용하는데요! 대표적인 종류와 용도에 대해 정리해보겠습니다.
 
