modify javascript-함수, 호이스팅

--- a/content/blog/javascript/호이스팅.md
+++ b/content/blog/javascript/호이스팅.md
@@ -6,25 +6,19 @@ thumbnail: { thumbnailSrc }
 draft: false
 ---
 
-javascript를 공부하다보면 자주 듣게되는, 그리고 면접 단골질문인 호이스팅에대해 정리해봅니다!
-
-## 호이스팅이란?
-
 호이스팅을 한마디로 정의하자면 아래정도가 될 것 같습니다.
 
 > 선언문이 가장 먼저 수행되는 것
 
 변수의 **선언문 부분이 해당 Scope의 최상단으로 끌어올려져 수행**된다 라고 표현하기도 합니다.
 
-javascript에서 선언문이라 하면 ```var```, ```let```, ```const```, ```function```, ```function*```, ```class``` 키워드를 이용하는 코드를 말합니다.
+javascript에서 선언문이라 하면 ```var```, ```let```, ```const```, ```function```, ```function*```, ```class``` 키워드를 이용하는 코드들을 말합니다.
 
 일반적으로 변수를 선언하고 값을 할당하려면 ```var a = 'test'``` 형태의 코드를 사용하는데요.\
 이 코드는 선언문인 ```var a```과  할당문인 ```a = 'test'```로 나눌 수 있습니다.
 
-호이스팅이 발생하게되면 **선언문인 ```var a```부분만 최상단에서 먼저 수행**되게 됩니다.\
-<small>(말이 너무 어렵나요..? 아래코드와 함께 보시면 이해가 되실겁니다!)</small>
-
-따라서 호이스팅은 아래코드처럼, **변수가 선언되기 전에도 에러없이 호출이 가능**해지는 결과를 만듭니다.
+호이스팅이 발생하게되면 **선언문인 ```var a```부분만 최상단에서 먼저 수행**되게 됩니다.
+\따라서 호이스팅은 아래코드처럼, **변수가 선언되기 전에도 에러없이 호출이 가능**해지는 결과를 만듭니다.
 ```js
 console.log(a); // undefined
 console.log(b); // undefined
@@ -39,7 +33,7 @@ var d = function () {}
 function e () { }
 
 ```
-호이스팅이 발생하면서 위의 코드는 사실 아래처럼 동작하기 때문입니다.
+호이스팅이 발생하면 위의 코드는 사실 아래처럼 동작합니다.
 ```js
 var a;
 var b;
@@ -85,8 +79,8 @@ const c = 3;
 반면 ```let b = 2```에서 선언문 부분인 ```let b```는 다음과 같이 동작합니다.
 - b라는 변수를 선언만 합니다. (**선언**)
 
-보시다시피 둘이의 차이점은 **초기화의 유무**입니다.\
-(```let/const``` 변수의 초기화는 값이 할당될때 이루어 집니다.)
+두 선언문의 차이점은 **초기화의 유무**입니다.\
+<small>```let/const``` 변수의 초기화는 값이 할당될때 이루어 집니다.</small>
 
 javascript에서 초기화를 하지 않은 변수는 참조가 불가능하기때문에, 초기화없이 선언만 되어있는  ```let/const``` 변수들은 참조가 불가능 한 것입니다!
 
@@ -107,13 +101,11 @@ var b = function () {};
 **```함수표현식```으로 정의한 b는** 일반 var 변수의 호이스팅과 동일하게  **```undefined```로 참조**가 되고있습니다.\
 반면 **```함수선언문```으로 정의한 a**는 실제값인 **```funciton a() {}```가 참조**되고 있습니다.
 
-이유는 함수선언문의 동작에 있습니다.
+이유는 ```함수선언문```이 **선언**, **초기화** 및 **할당**까지 모두 담당하기 때문입니다.\
+따라서 undefined가 아닌 실제 값의 참조가 가능해집니다.
 
-반면 ``함수선언문``은, 선언문이 **선언**, **초기화** 및 **할당**까지 모두 담당합니다.
-따라서 호이스팅되면, 실제 값의 할당까지 이루어지기 때문에 undefined가 아닌 값의 참조가 가능해집니다.
-
-``함수표현식``은, 일반 변수의 호이스팅과 동일하게 동작합니다.\
-따라서 ```var b = function () {};``` 코드는 선언문 부분인 ```var b``` 가 먼저 동작하게 되고, **선언**, **초기화**만 일어나게 되어, `undefined`로 참조가 됩니다.
+반면에 ```함수표현식```은 선언문인 ```var b```와, 표현식인 ```b = function () {};```로 나뉘어집니다.\
+따라서 ```var b``` 가 먼저 동작하여 **선언**, **초기화** 까지만 이루어지고, `undefined`로 참조가 됩니다.
 
 
 ## 결론
