--- a/content/blog/javascript/함수.md
+++ b/content/blog/javascript/함수.md
@@ -6,10 +6,6 @@ thumbnail: { thumbnailSrc }
 draft: false
 ---
 
-자바스크립트에서 함수란 무엇인지, 종류에는 어떤것들이 있는지 정리해봅니다!
-
-## 함수란?
-
 함수는 다양한 분야에서 다양한 형식으로 정의됩니다.\
 적어도 자바스크립트에서 함수를 간단히 정리하면 아래정도가 될 것 같네요 :)
 
@@ -17,10 +13,10 @@ draft: false
 > 값을 입력받아 다른 값을 반환하는 코드의 묶음(또는 블럭)
 
 
-'값을 반환하지 않는 함수가 있지않나요?'라고 생각할 수 있습니다.\
-그러나 정확히는 값을 반환하지 않는게 아니라, 반환하는 값이 정의되지 않은 값이라고 생각하는게 맞다고 생각해요 :)
+*"값을 반환하지 않는 함수가 있지않나요?"* 라고 생각할 수 있습니다.\
+그러나 정확히는 값을 반환하지 않는게 아니라, 반환하는 값이 undefined라고 이해하는게 맞다고 생각해요 :)
 
-종종 다른언어(ex. PL/SQL)들은 return이 없는 코드묶음을 프로시저라는 또다른 분류로 나누기도 합니다.
+종종 다른언어(ex. PL/SQL)들은 return이 없는 코드묶음을 프로시저라는 분류로 나누기도 합니다.
 
 ### 함수도 값이다!
 
